# netc

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  vcpkg.json
.claude/: settings.json  settings.local.json
.claude/agent-memory/c-core-architect/: MEMORY.md
.claude/agent-memory/network-compression-researcher/: MEMORY.md  header-overhead-research.md
.claude/agents/: c-core-architect.md  network-compression-researcher.md  project-manager.md
.claude/commands/: rulebook-task-apply.md  rulebook-task-archive.md  rulebook-task-create.md  rulebook-task-list.md  rulebook-task-show.md  rulebook-task-validate.md
.github/workflows/: ci.yml
.rulebook/: rulebook.json
.rulebook/specs/: AGENT_AUTOMATION.md  C.md  CPP.md  GIT.md  RULEBOOK.md
.rulebook/tasks/archive/2026-02-28-compact-packet-header/: tasks.md
.rulebook/tasks/archive/2026-02-28-fix-crc32-simd-dispatch/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/archive/2026-02-28-fix-simd-reporting-and-freq-dispatch/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/archive/2026-02-28-implement-adaptive-cross-packet-learning/: .metadata.json  tasks.md
.rulebook/tasks/archive/2026-02-28-implement-ans-codec/: .metadata.json  proposal.md
.rulebook/tasks/archive/2026-02-28-implement-benchmark-harness/: .metadata.json  tasks.md
.rulebook/tasks/archive/2026-02-28-implement-delta-prediction/: .metadata.json  tasks.md
.rulebook/tasks/archive/2026-02-28-implement-hardening-and-fuzz/: .metadata.json  tasks.md
.rulebook/tasks/archive/2026-02-28-implement-lzp-hash-prediction/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/archive/2026-02-28-implement-simd-acceleration/: .metadata.json  tasks.md
.rulebook/tasks/archive/2026-02-28-improve-compression-ratio-phase1/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/archive/2026-02-28-optimize-compress-throughput/: .metadata.json
.rulebook/tasks/archive/2026-02-28-optimize-small-packet-compression/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/archive/2026-02-28-optimize-tans-encode-throughput/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/archive/2026-02-28-setup-project-foundation/: .metadata.json  proposal.md
.rulebook/tasks/compact-packet-header/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/implement-adaptive-cross-packet-learning/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/implement-benchmark-harness/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/implement-cpp-sdk-unreal/: .metadata.json  tasks.md
.rulebook/tasks/implement-csharp-sdk-unity/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/implement-csharp-sdk-unity-godot/: .metadata.json
.rulebook/tasks/implement-delta-prediction/: .metadata.json  tasks.md
.rulebook/tasks/implement-gdextension-godot/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/implement-hardening-and-fuzz/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/implement-lzp-hash-prediction/: .metadata.json  tasks.md
.rulebook/tasks/implement-simd-acceleration/: .metadata.json  tasks.md
.rulebook/tasks/improve-compression-ratio-phase1/: tasks.md
.rulebook/tasks/optimize-compress-throughput/: .metadata.json  proposal.md  tasks.md
.rulebook/tasks/optimize-small-packet-compression/: .metadata.json  tasks.md
.rulebook/tasks/optimize-tans-encode-throughput/: .metadata.json  tasks.md
bench/: CMakeLists.txt  README.md  bench_baseline.c  bench_baseline.h  bench_compressor.c  bench_compressor.h  bench_corpus.c  bench_corpus.h  bench_huffman.c  bench_huffman.h  bench_lz4.c  bench_lz4.h  bench_main.c  bench_multicore.c  bench_multicore.h  bench_netc.c  bench_netc.h  bench_oodle.c  bench_oodle.h  bench_reporter.c  bench_reporter.h  bench_runner.c  bench_runner.h  bench_snappy.c  bench_snappy.h  bench_stats.c  bench_stats.h  bench_throughput.c  bench_throughput.h  bench_timer.h  bench_zlib.c  bench_zlib.h  bench_zstd.c  bench_zstd.h
cmake/: FetchUnity.cmake
docs/: PRD.md  api-reference.md  pgo-build.md
docs/design/: algorithm-decisions.md
docs/rfc/: RFC-001-netc-compression-protocol.md  RFC-002-benchmark-performance-requirements.md
docs/specs/: sdk-cpp.md  sdk-csharp.md
include/: netc.h
rulebook/specs/: RULEBOOK.md
rulebook/tasks/implement-ans-codec/: .metadata.json  tasks.md
rulebook/tasks/implement-benchmark-harness/: tasks.md
rulebook/tasks/implement-cpp-sdk-unreal/: .metadata.json  proposal.md  tasks.md
rulebook/tasks/implement-csharp-sdk-unity-godot/: proposal.md  tasks.md
rulebook/tasks/implement-delta-prediction/: .metadata.json  proposal.md  tasks.md
rulebook/tasks/implement-hardening-and-fuzz/: tasks.md
rulebook/tasks/implement-simd-acceleration/: proposal.md  tasks.md
rulebook/tasks/setup-project-foundation/: .metadata.json  tasks.md
sdk/cpp/: README.md
sdk/cpp/include/: netc.hpp
sdk/cpp/include/netc/: Context.hpp  Dict.hpp  Result.hpp  Trainer.hpp
sdk/cpp/src/: NetcContext.cpp  NetcDict.cpp  NetcResult.cpp  NetcTrainer.cpp
sdk/csharp/: Netc.Core.sln  README.md
sdk/csharp/Netc.Core/: Netc.Core.csproj  NetcContext.cs  NetcDict.cs  NetcException.cs  NetcMode.cs  NetcNative.cs  NetcResult.cs  NetcStats.cs  NetcTrainer.cs
sdk/csharp/tests/Netc.Core.Tests/: ContextTests.cs  DictTests.cs  DisposalTests.cs  ErrorTests.cs  Helpers.cs  Netc.Core.Tests.csproj  ResultTests.cs  (+2 more)
src/algo/: netc_adaptive.c  netc_adaptive.h  netc_delta.h  netc_lzp.h  netc_tans.c  netc_tans.h
src/core/: netc_compress.c  netc_ctx.c  netc_decompress.c  netc_dict.c  netc_internal.h
src/simd/: netc_simd.h  netc_simd_avx2.c  netc_simd_generic.c  netc_simd_neon.c  netc_simd_sse42.c
src/util/: netc_bitstream.h  netc_crc32.c  netc_crc32.h  netc_platform.h
tests/: fuzz_compress.c  fuzz_decompress.c  fuzz_dict_load.c  test_adaptive.c  test_api.c  test_bitstream.c  test_compact_header.c  test_compress.c  test_compress_debug.c  test_cpp_sdk.cpp  test_delta.c  test_dict.c  test_passthru.c  test_security.c  test_simd.c  test_tans_10bit.c  test_tans_debug.c  test_throughput_opts.c
(+13 files in other folders)
